<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home_fragment" />

    <item
        android:id="@+id/videoFragment"
        android:icon="@drawable/ic_video"
        android:title="@string/video_fragment" />

    <item
        android:id="@+id/trendingFragment"
        android:icon="@drawable/ic_trending"
        android:title="@string/trending_fragment" />

    <item
        android:id="@+id/covidFragment"
        android:icon="@drawable/ic_covid"
        android:title="@string/covid_fragment" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting_fragment" />
</menu>